@@ -3,7 +3,14 @@ package com.boaz.backend.domain.recruitment.service;
 import com.boaz.backend.domain.recruitment.dto.request.AnswerRequest;
 import com.boaz.backend.domain.recruitment.dto.request.ApplicationRequest;
 import com.boaz.backend.domain.recruitment.dto.request.DraftApplicationRequest;
+import com.boaz.backend.domain.recruitment.dto.request.QuestionItemRequest;
+import com.boaz.backend.domain.recruitment.dto.request.QuestionsCreateRequest;
+import com.boaz.backend.domain.recruitment.dto.request.QuestionUpdateRequest;
+import com.boaz.backend.domain.recruitment.dto.request.RecruitmentCreateRequest;
+import com.boaz.backend.domain.recruitment.dto.request.RecruitmentUpdateRequest;
 import com.boaz.backend.domain.recruitment.dto.request.SubscriptionRequest;
+import org.openapitools.jackson.nullable.JsonNullable;
+import java.util.concurrent.atomic.AtomicLong;
 import com.boaz.backend.domain.recruitment.dto.response.*;
 import com.boaz.backend.domain.recruitment.entity.*;
 import com.boaz.backend.domain.recruitment.repository.*;
@@ -40,6 +47,7 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.ArgumentMatchers.isNull;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
@@ -1337,18 +1345,18 @@ class RecruitmentServiceTest {
             Applicant eng = createSubmittedApplicant(r, u);
 
             when(recruitmentRepository.findByTerm(27)).thenReturn(Optional.of(r));
-            when(applicantRepository.findSubmittedByRecruitmentIdAndTrackOrderBySubmittedAt(
-                    eq(1L), eq(Track.ENGINEERING), any())).thenReturn(List.of(eng));
-            when(applicantRepository.findSubmittedByRecruitmentIdAndTrackOrderBySubmittedAt(
-                    eq(1L), eq(Track.ANALYSIS), any())).thenReturn(Collections.emptyList());
-            when(applicantRepository.findSubmittedByRecruitmentIdAndTrackOrderBySubmittedAt(
-                    eq(1L), eq(Track.VISUALIZATION), any())).thenReturn(Collections.emptyList());
+            when(applicantRepository.findSubmittedByRecruitmentIdAndTrackAndDecision(
+                    eq(1L), eq(Track.ENGINEERING), any(), any())).thenReturn(List.of(eng));
+            when(applicantRepository.findSubmittedByRecruitmentIdAndTrackAndDecision(
+                    eq(1L), eq(Track.ANALYSIS), any(), any())).thenReturn(Collections.emptyList());
+            when(applicantRepository.findSubmittedByRecruitmentIdAndTrackAndDecision(
+                    eq(1L), eq(Track.VISUALIZATION), any(), any())).thenReturn(Collections.emptyList());
             when(applicationQuestionRepository.findByRecruitmentIdAndCategories(any(), any(), any()))
                     .thenReturn(Collections.emptyList());
             when(applicantAnswerRepository.findByApplicantIds(any())).thenReturn(Collections.emptyList());
             when(csvService.generateCsv(any(), any(), any())).thenReturn(new byte[0]);
 
-            recruitmentService.downloadApplications(27);
+            recruitmentService.downloadApplications(27, DecisionFilter.ALL);
 
             verify(s3Service, times(3)).uploadCsv(eq("test-bucket"), any(), any());
         }
@@ -1358,13 +1366,13 @@ class RecruitmentServiceTest {
         void emptyApplicants() throws Exception {
             Recruitment r = createActiveRecruitment();
             when(recruitmentRepository.findByTerm(27)).thenReturn(Optional.of(r));
-            when(applicantRepository.findSubmittedByRecruitmentIdAndTrackOrderBySubmittedAt(any(), any(), any()))
+            when(applicantRepository.findSubmittedByRecruitmentIdAndTrackAndDecision(any(), any(), any(), any()))
                     .thenReturn(Collections.emptyList());
             when(applicationQuestionRepository.findByRecruitmentIdAndCategories(any(), any(), any()))
                     .thenReturn(Collections.emptyList());
             when(csvService.generateCsv(any(), any(), any())).thenReturn(new byte[0]);
 
-            recruitmentService.downloadApplications(27);
+            recruitmentService.downloadApplications(27, DecisionFilter.ALL);
 
             verify(s3Service, times(3)).uploadCsv(any(), any(), any());
         }
@@ -1374,10 +1382,51 @@ class RecruitmentServiceTest {
         void notFound() {
             when(recruitmentRepository.findByTerm(999)).thenReturn(Optional.empty());
 
-            assertThatThrownBy(() -> recruitmentService.downloadApplications(999))
+            assertThatThrownBy(() -> recruitmentService.downloadApplications(999, DecisionFilter.ALL))
                     .isInstanceOf(CustomException.class)
                     .extracting(e -> ((CustomException) e).getErrorCode())
                     .isEqualTo(ErrorCode.RECRUITMENT_NOT_FOUND);
+        }
+
+        @Test
+        @DisplayName("TC-012 decision=PASS → 합격 필터로 조회하고 S3 키에 PASS 표기")
+        void passFilter() throws Exception {
+            Recruitment r = createActiveRecruitment();
+            when(recruitmentRepository.findByTerm(27)).thenReturn(Optional.of(r));
+            when(applicantRepository.findSubmittedByRecruitmentIdAndTrackAndDecision(any(), any(), any(), any()))
+                    .thenReturn(Collections.emptyList());
+            when(applicationQuestionRepository.findByRecruitmentIdAndCategories(any(), any(), any()))
+                    .thenReturn(Collections.emptyList());
+            when(csvService.generateCsv(any(), any(), any())).thenReturn(new byte[0]);
+
+            recruitmentService.downloadApplications(27, DecisionFilter.PASS);
+
+            // 조회 시 final_decision=PASS 필터가 전달됨
+            verify(applicantRepository, times(3)).findSubmittedByRecruitmentIdAndTrackAndDecision(
+                    any(), any(), any(), eq(EvaluationDecision.PASS));
+            // S3 키에 PASS 표기 (부문별 3건)
+            org.mockito.ArgumentCaptor<String> keyCaptor =
+                    org.mockito.ArgumentCaptor.forClass(String.class);
+            verify(s3Service, times(3)).uploadCsv(any(), keyCaptor.capture(), any());
+            assertThat(keyCaptor.getAllValues()).allMatch(k -> k.contains("_PASS_"));
+        }
+
+        @Test
+        @DisplayName("TC-013 decision=ALL → final_decision 필터 null(전체) 전달")
+        void allFilterPassesNull() throws Exception {
+            Recruitment r = createActiveRecruitment();
+            when(recruitmentRepository.findByTerm(27)).thenReturn(Optional.of(r));
+            when(applicantRepository.findSubmittedByRecruitmentIdAndTrackAndDecision(any(), any(), any(), any()))
+                    .thenReturn(Collections.emptyList());
+            when(applicationQuestionRepository.findByRecruitmentIdAndCategories(any(), any(), any()))
+                    .thenReturn(Collections.emptyList());
+            when(csvService.generateCsv(any(), any(), any())).thenReturn(new byte[0]);
+
+            recruitmentService.downloadApplications(27, DecisionFilter.ALL);
+
+            // ALL → null 필터(전체)로 조회
+            verify(applicantRepository, times(3)).findSubmittedByRecruitmentIdAndTrackAndDecision(
+                    any(), any(), any(), isNull());
         }
     }
 
@@ -1567,6 +1616,784 @@ class RecruitmentServiceTest {
                     .isInstanceOf(CustomException.class)
                     .extracting(e -> ((CustomException) e).getErrorCode())
                     .isEqualTo(ErrorCode.RECRUITMENT_CLOSED);
+        }
+    }
+
+    // ──────────────────────────────────────────────
+    // Admin CRUD 테스트 헬퍼
+    // ──────────────────────────────────────────────
+
+    private RecruitmentCreateRequest buildCreateRecruitmentReq(
+            Integer term, LocalDateTime start, LocalDateTime end, String brochure) {
+        RecruitmentCreateRequest req = new RecruitmentCreateRequest();
+        ReflectionTestUtils.setField(req, "term", term);
+        ReflectionTestUtils.setField(req, "startDate", start);
+        ReflectionTestUtils.setField(req, "endDate", end);
+        ReflectionTestUtils.setField(req, "schedule", objectMapper.createArrayNode());
+        ReflectionTestUtils.setField(req, "brochureUrl", brochure);
+        return req;
+    }
+
+    private QuestionItemRequest buildQuestionItem(String label, ApplicationQuestion.Category category,
+            ApplicationQuestion.Type type, Integer limitLength, JsonNode metadata, int orderNum) {
+        QuestionItemRequest item = new QuestionItemRequest();
+        ReflectionTestUtils.setField(item, "label", label);
+        ReflectionTestUtils.setField(item, "category", category);
+        ReflectionTestUtils.setField(item, "type", type);
+        ReflectionTestUtils.setField(item, "content", "질문 " + label);
+        ReflectionTestUtils.setField(item, "limitLength", limitLength);
+        ReflectionTestUtils.setField(item, "metadata", metadata);
+        ReflectionTestUtils.setField(item, "orderNum", orderNum);
+        ReflectionTestUtils.setField(item, "isRequired", true);
+        return item;
+    }
+
+    private QuestionsCreateRequest buildQuestionsCreateReq(Long recruitmentId, QuestionItemRequest... items) {
+        QuestionsCreateRequest req = new QuestionsCreateRequest();
+        ReflectionTestUtils.setField(req, "recruitmentId", recruitmentId);
+        ReflectionTestUtils.setField(req, "questions", List.of(items));
+        return req;
+    }
+
+    // ══════════════════════════════════════════════
+    // REC-ADMIN-002: 모든 모집 공고 조회
+    // ══════════════════════════════════════════════
+    @Nested
+    @DisplayName("REC-ADMIN-002 모든 모집 공고 조회")
+    class GetAllRecruitments {
+
+        @Test
+        @DisplayName("TC-001 공고 여러 건 → term 내림차순 목록 반환")
+        void termDescList() {
+            Recruitment r27 = createActiveRecruitment();   // term 27
+            Recruitment r26 = createExpiredRecruitment();  // term 26
+            when(recruitmentRepository.findAllByOrderByTermDesc()).thenReturn(List.of(r27, r26));
+
+            List<RecruitmentResponse> result = recruitmentService.getAllRecruitments();
+
+            assertThat(result).hasSize(2);
+            assertThat(result.get(0).getTerm()).isEqualTo(27);
+        }
+
+        @Test
+        @DisplayName("TC-002 마감/예정 공고 포함 → is_active 무관 전체 필드 반환")
+        void inactiveStillFullFields() {
+            Recruitment upcoming = createUpcomingRecruitment(); // term 28, start 미래
+            Recruitment expired = createExpiredRecruitment();   // term 26, end 과거
+            when(recruitmentRepository.findAllByOrderByTermDesc()).thenReturn(List.of(upcoming, expired));
+
+            List<RecruitmentResponse> result = recruitmentService.getAllRecruitments();
+
+            RecruitmentResponse expiredRes = result.stream()
+                    .filter(r -> r.getTerm() == 26).findFirst().orElseThrow();
+            assertThat(expiredRes.getIsActive()).isFalse();
+            assertThat(expiredRes.getStartDate()).isNotNull();
+            assertThat(expiredRes.getEndDate()).isNotNull();
+
+            RecruitmentResponse upcomingRes = result.stream()
+                    .filter(r -> r.getTerm() == 28).findFirst().orElseThrow();
+            assertThat(upcomingRes.getIsActive()).isFalse();
+            assertThat(upcomingRes.getStartDate()).isNotNull();
+        }
+
+        @Test
+        @DisplayName("TC-003 공고 없음 → 빈 배열 (404 아님)")
+        void empty() {
+            when(recruitmentRepository.findAllByOrderByTermDesc()).thenReturn(Collections.emptyList());
+
+            assertThat(recruitmentService.getAllRecruitments()).isEmpty();
+        }
+    }
+
+    // ══════════════════════════════════════════════
+    // REC-ADMIN-003: 모집 공고 등록
+    // ══════════════════════════════════════════════
+    @Nested
+    @DisplayName("REC-ADMIN-003 모집 공고 등록")
+    class CreateRecruitment {
+
+        @Test
+        @DisplayName("TC-001 신규 기수 등록 → recruitment_id 반환")
+        void createSuccess() {
+            LocalDateTime start = LocalDateTime.now().plusDays(1);
+            LocalDateTime end = LocalDateTime.now().plusDays(15);
+            RecruitmentCreateRequest req = buildCreateRecruitmentReq(28, start, end, "https://e.com/b.pdf");
+            when(recruitmentRepository.existsByTerm(28)).thenReturn(false);
+            when(recruitmentRepository.save(any())).thenAnswer(inv -> {
+                Recruitment r = inv.getArgument(0);
+                ReflectionTestUtils.setField(r, "id", 13L);
+                return r;
+            });
+
+            RecruitmentIdResponse res = recruitmentService.createRecruitment(req);
+
+            assertThat(res.getRecruitmentId()).isEqualTo(13L);
+            verify(recruitmentRepository).save(any(Recruitment.class));
+        }
+
+        @Test
+        @DisplayName("TC-002 brochure_url 미입력 → null 저장")
+        void nullBrochure() {
+            LocalDateTime start = LocalDateTime.now().plusDays(1);
+            LocalDateTime end = LocalDateTime.now().plusDays(15);
+            RecruitmentCreateRequest req = buildCreateRecruitmentReq(28, start, end, null);
+            when(recruitmentRepository.existsByTerm(28)).thenReturn(false);
+            when(recruitmentRepository.save(any())).thenAnswer(inv -> {
+                Recruitment r = inv.getArgument(0);
+                ReflectionTestUtils.setField(r, "id", 13L);
+                return r;
+            });
+
+            recruitmentService.createRecruitment(req);
+
+            org.mockito.ArgumentCaptor<Recruitment> captor =
+                    org.mockito.ArgumentCaptor.forClass(Recruitment.class);
+            verify(recruitmentRepository).save(captor.capture());
+            assertThat(captor.getValue().getBrochureUrl()).isNull();
+        }
+
+        @Test
+        @DisplayName("TC-003 이미 존재하는 기수 → DUPLICATE_TERM")
+        void duplicateTerm() {
+            RecruitmentCreateRequest req = buildCreateRecruitmentReq(
+                    27, LocalDateTime.now().plusDays(1), LocalDateTime.now().plusDays(15), null);
+            when(recruitmentRepository.existsByTerm(27)).thenReturn(true);
+
+            assertThatThrownBy(() -> recruitmentService.createRecruitment(req))
+                    .isInstanceOf(CustomException.class)
+                    .extracting(e -> ((CustomException) e).getErrorCode())
+                    .isEqualTo(ErrorCode.DUPLICATE_TERM);
+            verify(recruitmentRepository, never()).save(any());
+        }
+
+        @Test
+        @DisplayName("TC-004 end_date == start_date → INVALID_INPUT_VALUE")
+        void endNotAfterStart() {
+            LocalDateTime same = LocalDateTime.now().plusDays(1);
+            RecruitmentCreateRequest req = buildCreateRecruitmentReq(28, same, same, null);
+            when(recruitmentRepository.existsByTerm(28)).thenReturn(false);
+
+            assertThatThrownBy(() -> recruitmentService.createRecruitment(req))
+                    .isInstanceOf(CustomException.class)
+                    .extracting(e -> ((CustomException) e).getErrorCode())
+                    .isEqualTo(ErrorCode.INVALID_INPUT_VALUE);
+            verify(recruitmentRepository, never()).save(any());
+        }
+
+        @Test
+        @DisplayName("TC-004b end_date < start_date → INVALID_INPUT_VALUE")
+        void endBeforeStart() {
+            LocalDateTime start = LocalDateTime.now().plusDays(15);
+            LocalDateTime end = LocalDateTime.now().plusDays(1); // end < start
+            RecruitmentCreateRequest req = buildCreateRecruitmentReq(28, start, end, null);
+            when(recruitmentRepository.existsByTerm(28)).thenReturn(false);
+
+            assertThatThrownBy(() -> recruitmentService.createRecruitment(req))
+                    .isInstanceOf(CustomException.class)
+                    .extracting(e -> ((CustomException) e).getErrorCode())
+                    .isEqualTo(ErrorCode.INVALID_INPUT_VALUE);
+            verify(recruitmentRepository, never()).save(any());
+        }
+    }
+
+    // ══════════════════════════════════════════════
+    // REC-ADMIN-004: 모집 공고 수정
+    // ══════════════════════════════════════════════
+    @Nested
+    @DisplayName("REC-ADMIN-004 모집 공고 수정")
+    class UpdateRecruitment {
+
+        @Test
+        @DisplayName("TC-001 start_date만 수정 → 해당 필드만 변경")
+        void updateStartOnly() {
+            Recruitment r = createActiveRecruitment(); // term 27, id 1
+            when(recruitmentRepository.findById(1L)).thenReturn(Optional.of(r));
+            LocalDateTime newStart = LocalDateTime.now().minusDays(2);
+            RecruitmentUpdateRequest req = new RecruitmentUpdateRequest();
+            ReflectionTestUtils.setField(req, "startDate", newStart);
+
+            RecruitmentIdResponse res = recruitmentService.updateRecruitment(1L, req);
+
+            assertThat(res.getRecruitmentId()).isEqualTo(1L);
+            assertThat(r.getStartDate()).isEqualTo(newStart);
+            assertThat(r.getTerm()).isEqualTo(27); // 미포함 필드 유지
+        }
+
+        @Test
+        @DisplayName("TC-002 schedule 수정 → 배열 전체 교체")
+        void replaceSchedule() throws Exception {
+            Recruitment r = createActiveRecruitment();
+            when(recruitmentRepository.findById(1L)).thenReturn(Optional.of(r));
+            var schedule = objectMapper.createArrayNode();
+            schedule.add(objectMapper.createObjectNode().put("step", "서류"));
+            RecruitmentUpdateRequest req = new RecruitmentUpdateRequest();
+            ReflectionTestUtils.setField(req, "schedule", schedule);
+
+            recruitmentService.updateRecruitment(1L, req);
+
+            assertThat(r.getSchedule()).isEqualTo(objectMapper.writeValueAsString(schedule));
+        }
+
+        @Test
+        @DisplayName("TC-003 brochure_url null 명시 전송 → 삭제")
+        void deleteBrochure() {
+            Recruitment r = createActiveRecruitment(); // brochure 존재
+            when(recruitmentRepository.findById(1L)).thenReturn(Optional.of(r));
+            RecruitmentUpdateRequest req = new RecruitmentUpdateRequest();
+            ReflectionTestUtils.setField(req, "brochureUrl", JsonNullable.of(null));
+
+            recruitmentService.updateRecruitment(1L, req);
+
+            assertThat(r.getBrochureUrl()).isNull();
+        }
+
+        @Test
+        @DisplayName("TC-003b brochure_url 미전송(undefined) → 기존 값 유지")
+        void brochureUndefinedKept() {
+            Recruitment r = createActiveRecruitment(); // brochure 존재
+            String original = r.getBrochureUrl();
+            when(recruitmentRepository.findById(1L)).thenReturn(Optional.of(r));
+            RecruitmentUpdateRequest req = new RecruitmentUpdateRequest();
+            ReflectionTestUtils.setField(req, "startDate", LocalDateTime.now().minusDays(2));
+            // brochureUrl 은 JsonNullable.undefined() 기본값 → 전송 안 함
+
+            recruitmentService.updateRecruitment(1L, req);
+
+            assertThat(r.getBrochureUrl()).isEqualTo(original);
+        }
+
+        @Test
+        @DisplayName("TC-004 존재하지 않는 공고 → RECRUITMENT_NOT_FOUND")
+        void notFound() {
+            when(recruitmentRepository.findById(999L)).thenReturn(Optional.empty());
+            RecruitmentUpdateRequest req = new RecruitmentUpdateRequest();
+
+            assertThatThrownBy(() -> recruitmentService.updateRecruitment(999L, req))
+                    .isInstanceOf(CustomException.class)
+                    .extracting(e -> ((CustomException) e).getErrorCode())
+                    .isEqualTo(ErrorCode.RECRUITMENT_NOT_FOUND);
+        }
+
+        @Test
+        @DisplayName("TC-005 다른 공고와 term 중복 → DUPLICATE_TERM")
+        void duplicateTerm() {
+            Recruitment r = createActiveRecruitment(); // id 1
+            when(recruitmentRepository.findById(1L)).thenReturn(Optional.of(r));
+            when(recruitmentRepository.existsByTermAndIdNot(26, 1L)).thenReturn(true);
+            RecruitmentUpdateRequest req = new RecruitmentUpdateRequest();
+            ReflectionTestUtils.setField(req, "term", 26);
+
+            assertThatThrownBy(() -> recruitmentService.updateRecruitment(1L, req))
+                    .isInstanceOf(CustomException.class)
+                    .extracting(e -> ((CustomException) e).getErrorCode())
+                    .isEqualTo(ErrorCode.DUPLICATE_TERM);
+        }
+
+        @Test
+        @DisplayName("TC-006 end_date만 수정했는데 기존 start_date보다 이전 → INVALID_INPUT_VALUE")
+        void endBeforeExistingStart() {
+            Recruitment r = createActiveRecruitment(); // start = now-1d
+            when(recruitmentRepository.findById(1L)).thenReturn(Optional.of(r));
+            RecruitmentUpdateRequest req = new RecruitmentUpdateRequest();
+            ReflectionTestUtils.setField(req, "endDate", LocalDateTime.now().minusDays(2));
+
+            assertThatThrownBy(() -> recruitmentService.updateRecruitment(1L, req))
+                    .isInstanceOf(CustomException.class)
+                    .extracting(e -> ((CustomException) e).getErrorCode())
+                    .isEqualTo(ErrorCode.INVALID_INPUT_VALUE);
+        }
+    }
+
+    // ══════════════════════════════════════════════
+    // REC-ADMIN-005: 모집 공고 삭제
+    // ══════════════════════════════════════════════
+    @Nested
+    @DisplayName("REC-ADMIN-005 모집 공고 삭제")
+    class DeleteRecruitment {
+
+        @Test
+        @DisplayName("TC-001 연관 데이터 없는 공고 → 삭제")
+        void deleteSuccess() {
+            Recruitment r = createActiveRecruitment();
+            when(recruitmentRepository.findById(1L)).thenReturn(Optional.of(r));
+            when(applicantRepository.existsByRecruitmentId(1L)).thenReturn(false);
+            when(applicationQuestionRepository.existsByRecruitmentId(1L)).thenReturn(false);
+
+            recruitmentService.deleteRecruitment(1L);
+
+            verify(recruitmentRepository).delete(r);
+        }
+
+        @Test
+        @DisplayName("TC-002 존재하지 않는 공고 → RECRUITMENT_NOT_FOUND")
+        void notFound() {
+            when(recruitmentRepository.findById(999L)).thenReturn(Optional.empty());
+
+            assertThatThrownBy(() -> recruitmentService.deleteRecruitment(999L))
+                    .isInstanceOf(CustomException.class)
+                    .extracting(e -> ((CustomException) e).getErrorCode())
+                    .isEqualTo(ErrorCode.RECRUITMENT_NOT_FOUND);
+        }
+
+        @Test
+        @DisplayName("TC-003 연관 지원자 존재 → RECRUITMENT_HAS_REFERENCES")
+        void hasApplicants() {
+            Recruitment r = createActiveRecruitment();
+            when(recruitmentRepository.findById(1L)).thenReturn(Optional.of(r));
+            when(applicantRepository.existsByRecruitmentId(1L)).thenReturn(true);
+
+            assertThatThrownBy(() -> recruitmentService.deleteRecruitment(1L))
+                    .isInstanceOf(CustomException.class)
+                    .extracting(e -> ((CustomException) e).getErrorCode())
+                    .isEqualTo(ErrorCode.RECRUITMENT_HAS_REFERENCES);
+            verify(recruitmentRepository, never()).delete(any());
+        }
+
+        @Test
+        @DisplayName("TC-004 연관 질문 존재 → RECRUITMENT_HAS_REFERENCES")
+        void hasQuestions() {
+            Recruitment r = createActiveRecruitment();
+            when(recruitmentRepository.findById(1L)).thenReturn(Optional.of(r));
+            when(applicantRepository.existsByRecruitmentId(1L)).thenReturn(false);
+            when(applicationQuestionRepository.existsByRecruitmentId(1L)).thenReturn(true);
+
+            assertThatThrownBy(() -> recruitmentService.deleteRecruitment(1L))
+                    .isInstanceOf(CustomException.class)
+                    .extracting(e -> ((CustomException) e).getErrorCode())
+                    .isEqualTo(ErrorCode.RECRUITMENT_HAS_REFERENCES);
+            verify(recruitmentRepository, never()).delete(any());
+        }
+    }
+
+    // ══════════════════════════════════════════════
+    // REC-ADMIN-006: 지원서 질문 등록
+    // ══════════════════════════════════════════════
+    @Nested
+    @DisplayName("REC-ADMIN-006 지원서 질문 등록")
+    class CreateQuestions {
+
+        @Test
+        @DisplayName("TC-001 TEXT+TABLE 다건 등록 → ids 반환")
+        void createMixedSuccess() throws Exception {
+            Recruitment r = createActiveRecruitment();
+            when(recruitmentRepository.findById(1L)).thenReturn(Optional.of(r));
+            when(applicationQuestionRepository.existsByRecruitmentIdAndLabel(eq(1L), any())).thenReturn(false);
+            when(applicationQuestionRepository.existsByRecruitmentIdAndCategoryAndOrderNum(eq(1L), any(), any()))
+                    .thenReturn(false);
+            AtomicLong seq = new AtomicLong(100);
+            when(applicationQuestionRepository.save(any())).thenAnswer(inv -> {
+                ApplicationQuestion q = inv.getArgument(0);
+                ReflectionTestUtils.setField(q, "id", seq.getAndIncrement());
+                return q;
+            });
+
+            JsonNode metadata = objectMapper.readTree("{\"rows\":[\"A\"],\"columns\":[\"B\"]}");
+            QuestionsCreateRequest req = buildQuestionsCreateReq(1L,
+                    buildQuestionItem("C1", ApplicationQuestion.Category.COMMON,
+                            ApplicationQuestion.Type.TEXT, 500, null, 1),
+                    buildQuestionItem("E1", ApplicationQuestion.Category.ENGINEERING,
+                            ApplicationQuestion.Type.TABLE, null, metadata, 1));
+
+            QuestionIdsResponse res = recruitmentService.createQuestions(req);
+
+            assertThat(res.getIds()).hasSize(2);
+            verify(applicationQuestionRepository, times(2)).save(any());
+        }
+
+        @Test
+        @DisplayName("TC-002 다른 category면 동일 order_num 허용")
+        void sameOrderDifferentCategory() {
+            Recruitment r = createActiveRecruitment();
+            when(recruitmentRepository.findById(1L)).thenReturn(Optional.of(r));
+            when(applicationQuestionRepository.existsByRecruitmentIdAndLabel(eq(1L), any())).thenReturn(false);
+            when(applicationQuestionRepository.existsByRecruitmentIdAndCategoryAndOrderNum(eq(1L), any(), any()))
+                    .thenReturn(false);
+            when(applicationQuestionRepository.save(any())).thenAnswer(inv -> {
+                ApplicationQuestion q = inv.getArgument(0);
+                ReflectionTestUtils.setField(q, "id", 1L);
+                return q;
+            });
+
+            QuestionsCreateRequest req = buildQuestionsCreateReq(1L,
+                    buildQuestionItem("C1", ApplicationQuestion.Category.COMMON,
+                            ApplicationQuestion.Type.TEXT, 500, null, 1),
+                    buildQuestionItem("E1", ApplicationQuestion.Category.ENGINEERING,
+                            ApplicationQuestion.Type.TEXT, 500, null, 1));
+
+            QuestionIdsResponse res = recruitmentService.createQuestions(req);
+
+            assertThat(res.getIds()).hasSize(2);
+        }
+
+        @Test
+        @DisplayName("TC-003 존재하지 않는 공고 → RECRUITMENT_NOT_FOUND")
+        void notFound() {
+            when(recruitmentRepository.findById(999L)).thenReturn(Optional.empty());
+            QuestionsCreateRequest req = buildQuestionsCreateReq(999L,
+                    buildQuestionItem("C1", ApplicationQuestion.Category.COMMON,
+                            ApplicationQuestion.Type.TEXT, 500, null, 1));
+
+            assertThatThrownBy(() -> recruitmentService.createQuestions(req))
+                    .isInstanceOf(CustomException.class)
+                    .extracting(e -> ((CustomException) e).getErrorCode())
+                    .isEqualTo(ErrorCode.RECRUITMENT_NOT_FOUND);
+        }
+
+        @Test
+        @DisplayName("TC-004 요청 내 label 중복 → DUPLICATE_QUESTION_LABEL")
+        void inRequestDuplicateLabel() {
+            Recruitment r = createActiveRecruitment();
+            when(recruitmentRepository.findById(1L)).thenReturn(Optional.of(r));
+            QuestionsCreateRequest req = buildQuestionsCreateReq(1L,
+                    buildQuestionItem("C1", ApplicationQuestion.Category.COMMON,
+                            ApplicationQuestion.Type.TEXT, 500, null, 1),
+                    buildQuestionItem("C1", ApplicationQuestion.Category.COMMON,
+                            ApplicationQuestion.Type.TEXT, 500, null, 2));
+
+            assertThatThrownBy(() -> recruitmentService.createQuestions(req))
+                    .isInstanceOf(CustomException.class)
+                    .extracting(e -> ((CustomException) e).getErrorCode())
+                    .isEqualTo(ErrorCode.DUPLICATE_QUESTION_LABEL);
+            verify(applicationQuestionRepository, never()).save(any());
+        }
+
+        @Test
+        @DisplayName("TC-005 요청 내 동일 category order_num 중복 → DUPLICATE_QUESTION_ORDER")
+        void inRequestDuplicateOrder() {
+            Recruitment r = createActiveRecruitment();
+            when(recruitmentRepository.findById(1L)).thenReturn(Optional.of(r));
+            QuestionsCreateRequest req = buildQuestionsCreateReq(1L,
+                    buildQuestionItem("C1", ApplicationQuestion.Category.COMMON,
+                            ApplicationQuestion.Type.TEXT, 500, null, 1),
+                    buildQuestionItem("C2", ApplicationQuestion.Category.COMMON,
+                            ApplicationQuestion.Type.TEXT, 500, null, 1));
+
+            assertThatThrownBy(() -> recruitmentService.createQuestions(req))
+                    .isInstanceOf(CustomException.class)
+                    .extracting(e -> ((CustomException) e).getErrorCode())
+                    .isEqualTo(ErrorCode.DUPLICATE_QUESTION_ORDER);
+        }
+
+        @Test
+        @DisplayName("TC-006 DB에 동일 label 존재 → DUPLICATE_QUESTION_LABEL")
+        void dbDuplicateLabel() {
+            Recruitment r = createActiveRecruitment();
+            when(recruitmentRepository.findById(1L)).thenReturn(Optional.of(r));
+            when(applicationQuestionRepository.existsByRecruitmentIdAndLabel(1L, "C1")).thenReturn(true);
+            QuestionsCreateRequest req = buildQuestionsCreateReq(1L,
+                    buildQuestionItem("C1", ApplicationQuestion.Category.COMMON,
+                            ApplicationQuestion.Type.TEXT, 500, null, 1));
+
+            assertThatThrownBy(() -> recruitmentService.createQuestions(req))
+                    .isInstanceOf(CustomException.class)
+                    .extracting(e -> ((CustomException) e).getErrorCode())
+                    .isEqualTo(ErrorCode.DUPLICATE_QUESTION_LABEL);
+            verify(applicationQuestionRepository, never()).save(any());
+        }
+
+        @Test
+        @DisplayName("TC-006b DB에 동일 category order_num 존재 → DUPLICATE_QUESTION_ORDER")
+        void dbDuplicateOrder() {
+            Recruitment r = createActiveRecruitment();
+            when(recruitmentRepository.findById(1L)).thenReturn(Optional.of(r));
+            when(applicationQuestionRepository.existsByRecruitmentIdAndLabel(1L, "C1")).thenReturn(false);
+            when(applicationQuestionRepository.existsByRecruitmentIdAndCategoryAndOrderNum(
+                    1L, ApplicationQuestion.Category.COMMON, 1)).thenReturn(true);
+            QuestionsCreateRequest req = buildQuestionsCreateReq(1L,
+                    buildQuestionItem("C1", ApplicationQuestion.Category.COMMON,
+                            ApplicationQuestion.Type.TEXT, 500, null, 1));
+
+            assertThatThrownBy(() -> recruitmentService.createQuestions(req))
+                    .isInstanceOf(CustomException.class)
+                    .extracting(e -> ((CustomException) e).getErrorCode())
+                    .isEqualTo(ErrorCode.DUPLICATE_QUESTION_ORDER);
+            verify(applicationQuestionRepository, never()).save(any());
+        }
+
+        @Test
+        @DisplayName("TC-007 TEXT인데 limit_length 누락 → MISSING_PARAMETER")
+        void textMissingLimitLength() {
+            Recruitment r = createActiveRecruitment();
+            when(recruitmentRepository.findById(1L)).thenReturn(Optional.of(r));
+            QuestionsCreateRequest req = buildQuestionsCreateReq(1L,
+                    buildQuestionItem("C1", ApplicationQuestion.Category.COMMON,
+                            ApplicationQuestion.Type.TEXT, null, null, 1));
+
+            assertThatThrownBy(() -> recruitmentService.createQuestions(req))
+                    .isInstanceOf(CustomException.class)
+                    .extracting(e -> ((CustomException) e).getErrorCode())
+                    .isEqualTo(ErrorCode.MISSING_PARAMETER);
+        }
+
+        @Test
+        @DisplayName("TC-007b TABLE인데 metadata 누락 → MISSING_PARAMETER")
+        void tableMissingMetadata() {
+            Recruitment r = createActiveRecruitment();
+            when(recruitmentRepository.findById(1L)).thenReturn(Optional.of(r));
+            QuestionsCreateRequest req = buildQuestionsCreateReq(1L,
+                    buildQuestionItem("T1", ApplicationQuestion.Category.ENGINEERING,
+                            ApplicationQuestion.Type.TABLE, null, null, 1));
+
+            assertThatThrownBy(() -> recruitmentService.createQuestions(req))
+                    .isInstanceOf(CustomException.class)
+                    .extracting(e -> ((CustomException) e).getErrorCode())
+                    .isEqualTo(ErrorCode.MISSING_PARAMETER);
+            verify(applicationQuestionRepository, never()).save(any());
+        }
+    }
+
+    // ══════════════════════════════════════════════
+    // REC-ADMIN-007: 지원서 질문 목록 조회 (어드민)
+    // ══════════════════════════════════════════════
+    @Nested
+    @DisplayName("REC-ADMIN-007 지원서 질문 목록 조회 (어드민)")
+    class GetAdminQuestions {
+
+        @Test
+        @DisplayName("TC-001 질문 존재 → order_num 오름차순 반환")
+        void orderAscList() {
+            Recruitment r = createActiveRecruitment();
+            when(recruitmentRepository.findById(1L)).thenReturn(Optional.of(r));
+            when(applicationQuestionRepository.findByRecruitmentIdOrderByOrderNumAsc(1L))
+                    .thenReturn(List.of(
+                            createTextQuestion(1L, r, ApplicationQuestion.Category.COMMON, 1, true),
+                            createTextQuestion(2L, r, ApplicationQuestion.Category.ENGINEERING, 10, true)));
+
+            List<QuestionResponse> result = recruitmentService.getAdminQuestions(1L);
+
+            assertThat(result).hasSize(2);
+            assertThat(result.get(0).getOrderNum()).isEqualTo(1);
+        }
+
+        @Test
+        @DisplayName("TC-002 마감/예정 공고도 조회 가능 (is_active 무관)")
+        void inactiveStillReturns() {
+            Recruitment r = createExpiredRecruitment(); // id 2
+            when(recruitmentRepository.findById(2L)).thenReturn(Optional.of(r));
+            when(applicationQuestionRepository.findByRecruitmentIdOrderByOrderNumAsc(2L))
+                    .thenReturn(List.of(createTextQuestion(1L, r, ApplicationQuestion.Category.COMMON, 1, true)));
+
+            List<QuestionResponse> result = recruitmentService.getAdminQuestions(2L);
+
+            assertThat(result).hasSize(1);
+        }
+
+        @Test
+        @DisplayName("TC-003 {Track} 플레이스홀더 미치환 확인")
+        void trackPlaceholderNotReplaced() {
+            Recruitment r = createActiveRecruitment();
+            ApplicationQuestion q = ApplicationQuestion.create(r, "E1",
+                    ApplicationQuestion.Category.ENGINEERING, ApplicationQuestion.Type.TEXT,
+                    "{Track} 관련 경험", null, 500, null, 1, true);
+            ReflectionTestUtils.setField(q, "id", 5L);
+            when(recruitmentRepository.findById(1L)).thenReturn(Optional.of(r));
+            when(applicationQuestionRepository.findByRecruitmentIdOrderByOrderNumAsc(1L))
+                    .thenReturn(List.of(q));
+
+            List<QuestionResponse> result = recruitmentService.getAdminQuestions(1L);
+
+            assertThat(result.get(0).getContent()).isEqualTo("{Track} 관련 경험");
+        }
+
+        @Test
+        @DisplayName("TC-004 질문 없음 → 빈 배열 (QUESTIONS_NOT_FOUND 아님)")
+        void emptyList() {
+            Recruitment r = createActiveRecruitment();
+            when(recruitmentRepository.findById(1L)).thenReturn(Optional.of(r));
+            when(applicationQuestionRepository.findByRecruitmentIdOrderByOrderNumAsc(1L))
+                    .thenReturn(Collections.emptyList());
+
+            assertThat(recruitmentService.getAdminQuestions(1L)).isEmpty();
+        }
+
+        @Test
+        @DisplayName("TC-005 존재하지 않는 공고 → RECRUITMENT_NOT_FOUND")
+        void notFound() {
+            when(recruitmentRepository.findById(999L)).thenReturn(Optional.empty());
+
+            assertThatThrownBy(() -> recruitmentService.getAdminQuestions(999L))
+                    .isInstanceOf(CustomException.class)
+                    .extracting(e -> ((CustomException) e).getErrorCode())
+                    .isEqualTo(ErrorCode.RECRUITMENT_NOT_FOUND);
+        }
+    }
+
+    // ══════════════════════════════════════════════
+    // REC-ADMIN-008: 지원서 질문 수정
+    // ══════════════════════════════════════════════
+    @Nested
+    @DisplayName("REC-ADMIN-008 지원서 질문 수정")
+    class UpdateQuestion {
+
+        @Test
+        @DisplayName("TC-001 content만 수정 → 해당 필드만 변경")
+        void updateContentOnly() {
+            Recruitment r = createActiveRecruitment();
+            ApplicationQuestion q = createTextQuestion(1L, r, ApplicationQuestion.Category.COMMON, 1, true);
+            when(applicationQuestionRepository.findById(1L)).thenReturn(Optional.of(q));
+            QuestionUpdateRequest req = new QuestionUpdateRequest();
+            ReflectionTestUtils.setField(req, "content", "수정된 질문 내용");
+
+            QuestionIdResponse res = recruitmentService.updateQuestion(1L, req);
+
+            assertThat(res.getQuestionId()).isEqualTo(1L);
+            assertThat(q.getContent()).isEqualTo("수정된 질문 내용");
+        }
+
+        @Test
+        @DisplayName("TC-002 TEXT→TABLE 타입 변경 (metadata 동반, limit_length 정리)")
+        void changeTypeToTable() throws Exception {
+            Recruitment r = createActiveRecruitment();
+            ApplicationQuestion q = createTextQuestion(1L, r, ApplicationQuestion.Category.COMMON, 1, true);
+            when(applicationQuestionRepository.findById(1L)).thenReturn(Optional.of(q));
+            JsonNode metadata = objectMapper.readTree("{\"rows\":[\"A\"],\"columns\":[\"B\"]}");
+            QuestionUpdateRequest req = new QuestionUpdateRequest();
+            ReflectionTestUtils.setField(req, "type", ApplicationQuestion.Type.TABLE);
+            ReflectionTestUtils.setField(req, "metadata", JsonNullable.of(metadata));
+
+            recruitmentService.updateQuestion(1L, req);
+
+            assertThat(q.getType()).isEqualTo(ApplicationQuestion.Type.TABLE);
+            assertThat(q.getMetadata()).isNotNull();
+            assertThat(q.getLimitLength()).isNull();
+        }
+
+        @Test
+        @DisplayName("TC-003 TABLE→TEXT 변경인데 limit_length 누락 → MISSING_PARAMETER")
+        void changeTypeToTextMissingLimit() {
+            Recruitment r = createActiveRecruitment();
+            ApplicationQuestion q = createTableQuestion(1L, r, ApplicationQuestion.Category.ENGINEERING, 1, true);
+            when(applicationQuestionRepository.findById(1L)).thenReturn(Optional.of(q));
+            QuestionUpdateRequest req = new QuestionUpdateRequest();
+            ReflectionTestUtils.setField(req, "type", ApplicationQuestion.Type.TEXT);
+
+            assertThatThrownBy(() -> recruitmentService.updateQuestion(1L, req))
+                    .isInstanceOf(CustomException.class)
+                    .extracting(e -> ((CustomException) e).getErrorCode())
+                    .isEqualTo(ErrorCode.MISSING_PARAMETER);
+        }
+
+        @Test
+        @DisplayName("TC-004 존재하지 않는 질문 → QUESTIONS_NOT_FOUND")
+        void notFound() {
+            when(applicationQuestionRepository.findById(999L)).thenReturn(Optional.empty());
+            QuestionUpdateRequest req = new QuestionUpdateRequest();
+
+            assertThatThrownBy(() -> recruitmentService.updateQuestion(999L, req))
+                    .isInstanceOf(CustomException.class)
+                    .extracting(e -> ((CustomException) e).getErrorCode())
+                    .isEqualTo(ErrorCode.QUESTIONS_NOT_FOUND);
+        }
+
+        @Test
+        @DisplayName("TC-005 같은 공고 내 label 중복 → DUPLICATE_QUESTION_LABEL")
+        void duplicateLabel() {
+            Recruitment r = createActiveRecruitment(); // id 1
+            ApplicationQuestion q = createTextQuestion(1L, r, ApplicationQuestion.Category.COMMON, 1, true);
+            when(applicationQuestionRepository.findById(1L)).thenReturn(Optional.of(q));
+            when(applicationQuestionRepository.existsByRecruitmentIdAndLabelAndIdNot(1L, "공통1", 1L))
+                    .thenReturn(true);
+            QuestionUpdateRequest req = new QuestionUpdateRequest();
+            ReflectionTestUtils.setField(req, "label", "공통1");
+
+            assertThatThrownBy(() -> recruitmentService.updateQuestion(1L, req))
+                    .isInstanceOf(CustomException.class)
+                    .extracting(e -> ((CustomException) e).getErrorCode())
+                    .isEqualTo(ErrorCode.DUPLICATE_QUESTION_LABEL);
+        }
+
+        @Test
+        @DisplayName("TC-006 order_num 중복 (resolvedCategory 기준) → DUPLICATE_QUESTION_ORDER")
+        void duplicateOrder() {
+            Recruitment r = createActiveRecruitment();
+            ApplicationQuestion q = createTextQuestion(1L, r, ApplicationQuestion.Category.COMMON, 1, true);
+            when(applicationQuestionRepository.findById(1L)).thenReturn(Optional.of(q));
+            when(applicationQuestionRepository.existsByRecruitmentIdAndCategoryAndOrderNumAndIdNot(
+                    1L, ApplicationQuestion.Category.COMMON, 1, 1L)).thenReturn(true);
+            QuestionUpdateRequest req = new QuestionUpdateRequest();
+            ReflectionTestUtils.setField(req, "orderNum", 1);
+
+            assertThatThrownBy(() -> recruitmentService.updateQuestion(1L, req))
+                    .isInstanceOf(CustomException.class)
+                    .extracting(e -> ((CustomException) e).getErrorCode())
+                    .isEqualTo(ErrorCode.DUPLICATE_QUESTION_ORDER);
+        }
+
+        @Test
+        @DisplayName("TC-007 metadata null 명시 전송 → 삭제")
+        void deleteMetadata() {
+            Recruitment r = createActiveRecruitment();
+            ApplicationQuestion q = createTableQuestion(1L, r, ApplicationQuestion.Category.ENGINEERING, 1, true);
+            when(applicationQuestionRepository.findById(1L)).thenReturn(Optional.of(q));
+            QuestionUpdateRequest req = new QuestionUpdateRequest();
+            ReflectionTestUtils.setField(req, "metadata", JsonNullable.of(null));
+
+            recruitmentService.updateQuestion(1L, req);
+
+            assertThat(q.getMetadata()).isNull();
+        }
+
+        @Test
+        @DisplayName("TC-007b metadata 미전송(undefined) → 기존 값 유지")
+        void metadataUndefinedKept() {
+            Recruitment r = createActiveRecruitment();
+            ApplicationQuestion q = createTableQuestion(1L, r, ApplicationQuestion.Category.ENGINEERING, 1, true);
+            String original = q.getMetadata();
+            when(applicationQuestionRepository.findById(1L)).thenReturn(Optional.of(q));
+            QuestionUpdateRequest req = new QuestionUpdateRequest();
+            ReflectionTestUtils.setField(req, "content", "내용만 수정");
+            // metadata, limitLength, description 모두 JsonNullable.undefined() 기본값 → 미전송
+
+            recruitmentService.updateQuestion(1L, req);
+
+            assertThat(q.getMetadata()).isEqualTo(original);
+        }
+    }
+
+    // ══════════════════════════════════════════════
+    // REC-ADMIN-009: 지원서 질문 삭제
+    // ══════════════════════════════════════════════
+    @Nested
+    @DisplayName("REC-ADMIN-009 지원서 질문 삭제")
+    class DeleteQuestion {
+
+        @Test
+        @DisplayName("TC-001 답변 없는 질문 → 삭제")
+        void deleteSuccess() {
+            Recruitment r = createActiveRecruitment();
+            ApplicationQuestion q = createTextQuestion(1L, r, ApplicationQuestion.Category.COMMON, 1, true);
+            when(applicationQuestionRepository.findById(1L)).thenReturn(Optional.of(q));
+            when(applicantAnswerRepository.existsByQuestionId(1L)).thenReturn(false);
+
+            recruitmentService.deleteQuestion(1L);
+
+            verify(applicationQuestionRepository).delete(q);
+        }
+
+        @Test
+        @DisplayName("TC-002 존재하지 않는 질문 → QUESTIONS_NOT_FOUND")
+        void notFound() {
+            when(applicationQuestionRepository.findById(999L)).thenReturn(Optional.empty());
+
+            assertThatThrownBy(() -> recruitmentService.deleteQuestion(999L))
+                    .isInstanceOf(CustomException.class)
+                    .extracting(e -> ((CustomException) e).getErrorCode())
+                    .isEqualTo(ErrorCode.QUESTIONS_NOT_FOUND);
+        }
+
+        @Test
+        @DisplayName("TC-003 참조 답변 존재 → QUESTION_HAS_ANSWERS")
+        void hasAnswers() {
+            Recruitment r = createActiveRecruitment();
+            ApplicationQuestion q = createTextQuestion(1L, r, ApplicationQuestion.Category.COMMON, 1, true);
+            when(applicationQuestionRepository.findById(1L)).thenReturn(Optional.of(q));
+            when(applicantAnswerRepository.existsByQuestionId(1L)).thenReturn(true);
+
+            assertThatThrownBy(() -> recruitmentService.deleteQuestion(1L))
+                    .isInstanceOf(CustomException.class)
+                    .extracting(e -> ((CustomException) e).getErrorCode())
+                    .isEqualTo(ErrorCode.QUESTION_HAS_ANSWERS);
+            verify(applicationQuestionRepository, never()).delete(any());
         }
     }
 }
